--- a/consul/pom.xml
+++ b/consul/pom.xml
@@ -11,5 +11,12 @@
 
     <artifactId>consul</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-consul-discovery</artifactId>
+        </dependency>
+    </dependencies>
+
 
 </project>
