--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
     <modules>
         <module>eureka</module>
         <module>eureka-client</module>
+        <module>consul</module>
+        <module>eureka-consumer</module>
     </modules>
 
 
