--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
         <module>eureka-client</module>
         <module>consul</module>
         <module>eureka-consumer</module>
+        <module>eureka-consumer-ribbon</module>
+        <module>eureka-consumer-feign</module>
     </modules>
 
 
