add spring cloud config

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
         <module>consul</module>
         <module>eureka-consumer</module>
         <module>eureka-consumer-ribbon</module>
+        <module>config-server</module>
+        <module>config-client</module>
     </modules>
 
 
